--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ a {
 .booking .booking-info {
   font-size: 14px;
   line-height: 24px;
+  font-weight: 400;
   color:#333333;
   text-align: center;
 }
@@ -299,6 +300,7 @@ input.days {
 .detail {
   line-height: 21px;
   padding: 4px 17px;
+  line-height: 21px;
   background-color: #81b3d2;
   color: #ffffff;
   border: none;
@@ -314,6 +316,7 @@ input.days {
 }
 .button {
   padding: 4px 17px;
+  line-height: 21px;
   background-color: #766357;
   color: #ffffff;
   border: none;
@@ -387,4 +390,41 @@ input.days {
 
 .footer-copyright a:active {
   color: #bdbbbc;
+}
+
+
+
+ /* СЕТКА */
+
+ .general-background {
+  display: block;
+  max-width: 1200px;
+  width: 100%;
+  min-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 61px;
+}
+.main-navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-header-logo {
+  width: 138px;
+  height: 72px;
+  order: 0;
+
+
+}
+.site-navigation
+ {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
 }
